--- a/Source/VersionDefs.rc
+++ b/Source/VersionDefs.rc
@@ -1,10 +1,10 @@
 // version format: 1.2digitYear.month2DigitDay.buildOfTheDay
 #define VER_MAJ   1
 #define VER_MIN   25
-#define VER_SUB   225
-#define VER_BUILD 1
+#define VER_SUB   421
+#define VER_BUILD 2
 
-#define VER_VERSION_STR  "1.25.225.1\0"
+#define VER_VERSION_STR  "1.25.421.2\0"
 
 #define VER_FILEVERSION        VER_MAJ,VER_MIN,VER_SUB,VER_BUILD
 #define VER_FILEVERSION_STR    ""VER_VERSION_STR"\0"
@@ -14,4 +14,4 @@
 #define VER_PRODUCTVERSION_STR   ""VER_VERSION_STR"\0"
 
 #define VER_COMPANYNAME_STR      "ASW Software\0"
-#define VER_LEGALCOPYRIGHT_STR   "(c) 2008-2025 "VER_COMPANYNAME_STR"\0"
+#define VER_LEGALCOPYRIGHT_STR   "(c) 2025 "VER_COMPANYNAME_STR"\0"
